# disjuntor

./: README.md  pyproject.toml
disjuntor/: __init__.py  main.py  storage.py
tests/: test_main.py
